Add initial setup for Zenopay plugins: include .gitignore, package.json, pnpm-lock.yaml, pnpm-workspace.yaml, turbo.json, and docker-compose files for PrestaShop and WordPress. Configure workspace and dependencies for Turbo and PNPM.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 
+node_modules/
+.svn/
+*.zip
+.DS_Store
+.svn/*
 
 # ---- CakePHP ----
 # CakePHP 3
@@ -399,3 +404,7 @@ wp-config.php
 
 # ---- Claude AI ----
 **/.claude/settings.local.json
+
+# ---- Turborepo ----
+.turbo/
+.pnpm-store/*
