Enhance PrestaShop Zeno Gateway module: update .gitignore to exclude local IDE cache, add VSCode settings for development, and implement sync script for IDE core files. Refactor confirmation and redirect controllers for improved order processing and error handling.

--- a/.gitignore
+++ b/.gitignore
@@ -411,5 +411,8 @@ wp-config.php
 # ---- pnpm local store ----
 /.pnpm-store/
 /.pnpm-store/v10/
+
+# ---- Local IDE Prestashop core cache ----
+/prestashop/ide-core/
 .pnpm-store/*
 .claude/*
