Add WHMCS plugin structure: create package.json and tsconfig.json, implement build script for module packaging, and update .gitignore to exclude build artifacts.

--- a/.gitignore
+++ b/.gitignore
@@ -416,6 +416,7 @@ wp-config.php
 /prestashop/ide-core/
 .pnpm-store/*
 .claude/*
+/whmcs/dist/
 
 # ---- Local WordPress Docker data ----
 /wordpress/wp_data/
