--- a/.gitignore
+++ b/.gitignore
@@ -417,6 +417,7 @@ wp-config.php
 .pnpm-store/*
 .claude/*
 /whmcs/dist/
+/wordpress/easy-digital-downloads/dist/
 
 # ---- Local WordPress Docker data ----
 /wordpress/wp_data/
