--- a/wordpress/easy-digital-downloads/package.json
+++ b/wordpress/easy-digital-downloads/package.json
@@ -6,10 +6,13 @@
   "scripts": {
     "check": "tsx scripts/check.ts",
     "build:zip": "tsc && node dist/build.js",
+    "plugin:deploy": "tsx scripts/deploy.ts",
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "@types/node": "^25.2.3",
+    "colors": "^1.4.0",
+    "commander": "^14.0.3",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
